Fix from a smaller screen issue

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,7 @@ set -g status-keys vi                                                  # Use vi 
 setw -g mode-keys vi                                                   # Use vi style keybindings in copy mode
 set -g base-index 1                                                    # Starting index for new window
 set -g pane-base-index 1                                               # Starting index for new pane
+setw -g aggressive-resize on                                           # Fix from a smaller client issue
 # GENERAL SETTINGS END HERE
 # }}}
 
