Fix error message in latest tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -48,8 +48,8 @@ unbind r                                                               # refresh
 unbind s                                                               # choose-tree -Zs
 unbind w                                                               # choose-tree -Zw
 unbind x                                                               # confirm-before -p\"kill-pane #P? (y/n)\" kill-pane"
-unbind {                                                               # swap-pane -U
-unbind }                                                               # swap-pane -D
+unbind '{'                                                             # swap-pane -U
+unbind '}'                                                             # swap-pane -D
 unbind M-n                                                             # next-window -a
 unbind M-p                                                             # previous-window -a
 unbind M-Up                                                            # resize-pane -U 5
