--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,7 @@ setw -g mode-keys vi                                                   # Use vi 
 set -g base-index 1                                                    # Starting index for new window
 set -g pane-base-index 1                                               # Starting index for new pane
 setw -g aggressive-resize on                                           # Fix from a smaller client issue
+
 # GENERAL SETTINGS END HERE
 # }}}
 
@@ -183,7 +184,7 @@ setw -g pane-active-border-style "fg=$RED"                             # Active 
 if -b "test -n '$SSH_CLIENT'" "set -g status-position top"
 
 # Left status line configurations
-set -g status-left "#[fg=$BLACK,bold,bg=$BLUE] $POWERLINE_SESSION_ICONl$POWERLINE_SESSION_ICON#S #[fg=$BLUE,bg=$YELLOW]$POWERLINE_SEPARATOR_RIGHT#[fg=$BLACK,bold] $POWERLINE_USER_ICON#(whoami) #[fg=$YELLOW,bg=$GREEN]$POWERLINE_SEPARATOR_RIGHT#[fg=$BLACK,bold]$POWERLINE_LOGO#[fg=$GREEN,bg=$BLACK]$POWERLINE_SEPARATOR_RIGHT"
+set -g status-left "#[fg=$BLACK,bold,bg=$BLUE] $POWERLINE_SESSION_ICON#S #[fg=$BLUE,bg=$YELLOW]$POWERLINE_SEPARATOR_RIGHT#[fg=$BLACK,bold] $POWERLINE_USER_ICON#(whoami) #[fg=$YELLOW,bg=$GREEN]$POWERLINE_SEPARATOR_RIGHT#[fg=$BLACK,bold]$POWERLINE_LOGO#[fg=$GREEN,bg=$BLACK]$POWERLINE_SEPARATOR_RIGHT"
 
 # Right status line configurations
 set -g status-right "#[fg=$BLUE,bg=$BLACK]$POWERLINE_SEPARATOR_LEFT#[fg=$BLACK,bold,bg=$BLUE] #T$POWERLINE_COMMAND_ICON #[fg=$PURPLE,bg=$BLUE]$POWERLINE_SEPARATOR_LEFT#[fg=$BLACK,bold,bg=$PURPLE] %a,%d %b %y | %I:%M %p$POWERLINE_CLOCK_ICON "
