--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,5 +1,17 @@
 {
     "yaml.schemas": {
-        "kubernetes": "/*.yaml"
+        "kubernetes": [
+            "01-namespace.yaml",
+            "deployment.yaml",
+            "daemonset.yaml",
+            "service.yaml",
+            "pv.yaml",
+            "pvc.yaml",
+            "configmap.yaml",
+            "secret.yaml",
+            "rbac.yaml",
+            "crd.yaml"
+        ],
+        "https://raw.githubusercontent.com/docker/compose/master/compose/config/compose_spec.json": ["docker-compose.yml"]
     }
 }
