--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -18,6 +18,7 @@
         "!include_dir_list",
         "!include_dir_named",
         "!include_dir_merge_list",
-        "!include_dir_merge_named"
+        "!include_dir_merge_named",
+        "secret"
     ]
 }
