--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -19,6 +19,6 @@
         "!include_dir_named",
         "!include_dir_merge_list",
         "!include_dir_merge_named",
-        "secret"
+        "!secret"
     ]
 }
